hello-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2 # Yêu cầu: Luôn có 2 bản sao (Pod) của ứng dụng này chạy
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app # Gắn nhãn cho các Pod để Service có thể tìm thấy
    spec:
      containers:
      - name: web-server
        image: tamnguyencoder/my-backend-app:v3
        ports:
        - containerPort: 3000
        secretRef:
            name: app-secret # Lấy tất cả key từ Secret 'app-secret'
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-app # Tìm và gom nhóm các Pod có nhãn 'app: hello-app'
  ports:
    - protocol: TCP
      port: 80 # Service sẽ nhận traffic ở cổng 80...
      targetPort: 3000 # Service sẽ chuyển tiếp đến cổng 3000 của Pod
