hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - host: "hello.tam-dev.site" # <-- DOMAIN BẠN SẼ SỬ DỤNG
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service # Hướng traffic đến Service đã tạo ở Bước 2
            port:
              number: 80
